Expose inventory folders to region services
